prodMetadata/src/objects/Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Added__c</fullName>
        <label># Added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notContain</operation>
                <value>Portal</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <formula>IF(AND(RecordType.Name = &apos;Hardware&apos;,NOT(ISBLANK(Assigned_To__c))),true,false)</formula>
        <label>Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Requesting__c</fullName>
        <formula>IF(CONTAINS(RecordType.Name, &apos;Request&apos;), CreatedBy.Department, null)</formula>
        <label>Department Requesting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Assigned_To__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfilled_with_Alternative_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfilled with Alternative Item</label>
        <referenceTo>Line_Item__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Item__c</fullName>
        <label>Inventory Item</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipName>Inventory_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsJoinedToServer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joined to Server</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>Livestream</fullName>
                </value>
                <value>
                    <fullName>Pure Digital</fullName>
                </value>
                <value>
                    <fullName>Toshiba</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Oscar Mike</fullName>
                </value>
                <value>
                    <fullName>Undefeated</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broadcaster</fullName>
                </value>
                <value>
                    <fullName>Flipcam</fullName>
                </value>
                <value>
                    <fullName>Mac</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <label>Reason for Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested__c</fullName>
        <label># Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <inlineHelpText>If you cannot pick these items up at NYC HQ, enter a shipping address.</inlineHelpText>
        <label>Ship To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Size_inches__c</fullName>
        <label>Size (inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <externalId>true</externalId>
        <label>Tag</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type/Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>X-Small</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>X-Large</fullName>
                </value>
                <value>
                    <fullName>XX-Large</fullName>
                </value>
                <value>
                    <fullName>XXX-Large</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Keyboard</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Media Broadcaster</fullName>
                </value>
                <value>
                    <fullName>MiFi</fullName>
                </value>
                <value>
                    <fullName>Mouse</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Screen</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Video Camera</fullName>
                </value>
                <value>
                    <fullName>American flag</fullName>
                </value>
                <value>
                    <fullName>Banner for hanging</fullName>
                </value>
                <value>
                    <fullName>Banner with poles</fullName>
                </value>
                <value>
                    <fullName>Camo tote</fullName>
                </value>
                <value>
                    <fullName>Gala give-away tote</fullName>
                </value>
                <value>
                    <fullName>Gold coin</fullName>
                </value>
                <value>
                    <fullName>IAVA flag</fullName>
                </value>
                <value>
                    <fullName>Lapel pin</fullName>
                </value>
                <value>
                    <fullName>Magnet lapel pin</fullName>
                </value>
                <value>
                    <fullName>Other flag</fullName>
                </value>
                <value>
                    <fullName>Retractable banner</fullName>
                </value>
                <value>
                    <fullName>Silver coin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>Line_Items_Unfulfilled</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department_Requesting__c</columns>
        <columns>Inventory_Item__c</columns>
        <columns>Added__c</columns>
        <columns>Fulfilled__c</columns>
        <columns>Requested__c</columns>
        <columns>Assigned__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fulfilled__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Line_Item__c.Request_Apparel</value>
        </filters>
        <label>Line Items Unfulfilled</label>
    </listViews>
    <listViews>
        <fullName>Programs_Inventory_Requests</fullName>
        <columns>Inventory_Item__c</columns>
        <columns>NAME</columns>
        <columns>Department_Requesting__c</columns>
        <columns>Type__c</columns>
        <columns>Requested__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department_Requesting__c</field>
            <operation>equals</operation>
            <value>Programs</value>
        </filters>
        <label>Programs Inventory Requests</label>
    </listViews>
    <nameField>
        <displayFormat>LI-{0}</displayFormat>
        <label>Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <recordTypes>
        <fullName>Hardware</fullName>
        <active>true</active>
        <description>Record type for items used internally such as computers and phones</description>
        <label>Hardware</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Apparel</fullName>
        <active>true</active>
        <description>Record type for requesting items of clothing (tshirts, sweatshirts, etc.)</description>
        <label>Request Apparel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request_Other_Merch</fullName>
        <active>true</active>
        <description>Record type for requesting un-sized merchandise such as hats and buttons</description>
        <label>Request Other Merch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stock_Apparel</fullName>
        <active>true</active>
        <description>Record type for stocking items of clothing (tshirts, sweatshirts, etc.)</description>
        <label>Stock Apparel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stock_Other_Merch</fullName>
        <active>true</active>
        <description>Record type for stocking un-sized merchandise such as hats and buttons</description>
        <label>Stock Other Merch</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ItemNoLongerInStock</fullName>
        <active>true</active>
        <description>The requested item is out of stock.</description>
        <errorConditionFormula>(RecordType.Name = &apos;Request Apparel&apos; || RecordType.Name = &apos;Request Other Merch&apos;) &amp;&amp;
Inventory_Item__r.Current_Inventory__c = 0</errorConditionFormula>
        <errorDisplayField>Inventory_Item__c</errorDisplayField>
        <errorMessage>This item is no longer available. Please cancel this request or request a different item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestedGreaterThanAvailable</fullName>
        <active>true</active>
        <description>The number of inventory items requested is greater than what is available.</description>
        <errorConditionFormula>Requested__c &gt; Inventory_Item__r.Current_Inventory__c</errorConditionFormula>
        <errorDisplayField>Requested__c</errorDisplayField>
        <errorMessage>You have requested more items than are currently available. Please decrease the number of items in your request.</errorMessage>
    </validationRules>
</CustomObject>